fixed overlapping sections

--- a/src/app/components/dashboard/renderTrunk/eTerminService/eTerminServiceRender.scss
+++ b/src/app/components/dashboard/renderTrunk/eTerminService/eTerminServiceRender.scss
@@ -47,7 +47,6 @@ h2 {
 
 .dashboard-content {
   display: block;
-  padding-top: 80px;
 }
 
 .dashboard-content-header {
